--- a/style.css
+++ b/style.css
@@ -1,8 +1,50 @@
-
-body
-{
-background-color: rgb(209, 147, 209);
-color: black;
-font-size: 12pt;
-font-family: acial;
+body{
+    background-image: linear-gradient(360deg, rgb(186, 136, 189), rgb(179, 113, 199) );
+    color: black;
+    font-size: 12px;
  }
+
+h1{
+    font-size: 30px;
+    color: black;
+    font-family: Arial, Helvetica, sans-serif;
+    text-align: center;
+} 
+
+h2{
+    font-size: 30px;
+    color: black;
+    font-family: Arial, Helvetica, sans-serif;
+    text-align: center;
+} 
+
+a{
+    color: blue;
+    text-decoration: none;
+    text-align: center;
+} 
+
+li, p{
+    text-align: center;
+    font-size: 20px;
+    text-align: center;
+}
+
+img{
+    width: 560px;
+    display: block;
+    margin: 0 auto;
+}
+
+.par{
+    color: blue;
+    font-size: 20pt;
+    font-family: Verdana;
+    text-align: justify;
+}
+
+.impar{
+    color:  red;
+    font-size: 16pt;
+    font-family: Arial;
+}
